--- a/content/docs/configuration.mdx
+++ b/content/docs/configuration.mdx
@@ -34,7 +34,7 @@ STELLAR_RPC_URL=https://soroban-testnet.stellar.org
 STELLAR_HORIZON_URL=https://horizon-testnet.stellar.org
 ```
 
-<Callout variant="note">
+<Callout type="note">
   Use `mainnet` for production. The Soroban RPC endpoint changes between networks.
 </Callout>
 
@@ -89,6 +89,6 @@ NEXT_PUBLIC_STELLAR_NETWORK=testnet
 | `NODE_ENV` | No | `development` | Runtime environment |
 | `STELLAR_NETWORK` | No | `testnet` | `testnet` or `mainnet` |
 
-<Callout variant="danger">
+<Callout type="danger">
   Never commit your `.env` file to version control. It is already listed in `.gitignore`.
 </Callout>
