--- a/content/docs/getting-started.mdx
+++ b/content/docs/getting-started.mdx
@@ -7,7 +7,7 @@ section: Getting Started
 
 OFFER-HUB is a non-custodial escrow payment layer for modern marketplaces. It enables secure, trustless transactions between buyers and sellers without requiring you to build complex payment infrastructure.
 
-<Callout variant="tip">
+<Callout type="tip">
   If you just want to run the project locally, jump straight to the [Installation](/docs/installation) guide.
 </Callout>
 
