--- a/content/docs/installation.mdx
+++ b/content/docs/installation.mdx
@@ -49,7 +49,7 @@ Apply the Supabase migrations to create the required tables and RPC functions:
 
 <CommandLine>cd backend && npx supabase db push</CommandLine>
 
-<Callout variant="warning">
+<Callout type="warning">
   Make sure you have the Supabase CLI installed and are logged in before running migrations.
 </Callout>
 
@@ -78,6 +78,6 @@ You should see:
 }
 ```
 
-<Callout variant="tip">
+<Callout type="tip">
   Continue to [Configuration](/docs/configuration) to learn about all available environment variables and Supabase setup.
 </Callout>
